istio/service-entry-worldclock-api.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: worldclockapi-egress-rule
spec:
  hosts:
  - worldclockapi.com
  ports:
  - name: http-80
    number: 80
    protocol: http
