istio/virtual-service-recommendation-503.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: recommendation
spec:
  hosts:
  - recommendation
  http:
  - fault:
      abort:
        httpStatus: 503
        percentage:
          value: 100
    route:
    - destination:
        host: recommendation
        subset: version-v1
  - route:
    - destination:
        host: recommendation
        subset: version-v1
      weight: 100
