istio/authorization-policy-allow-recommendation.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: recommendation-viewer
spec:
  selector:
    matchLabels:
      app: recommendation
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/default/sa/preference"]
    to:
    - operation:
        methods: ["GET"]
